--- a/web-app/src/index.css
+++ b/web-app/src/index.css
@@ -1,7 +1,9 @@
 body {
     margin: 0;
     padding: 0;
+    color: rgb(34, 34, 34);
     font-family: 'Roboto', sans-serif;
+    background-color: lightgray;
 }
 
 body::-webkit-scrollbar {
@@ -24,6 +26,5 @@ a:link,
 a:visited,
 a:hover,
 a:active {
-    color: #eaeaea;
-    text-decoration: none;
+    color: #a5a5a5;
 }
