--- a/web-app/src/index.css
+++ b/web-app/src/index.css
@@ -6,6 +6,8 @@ body {
     background-color: lightgray;
 }
 
+/* scrolls */
+
 body::-webkit-scrollbar {
     width: 15px;
 }
@@ -15,11 +17,14 @@ body::-webkit-scrollbar-track {
 }
 
 body::-webkit-scrollbar-thumb {
-    background-color: #ccc;
-    border-radius: 10px;
-    border: 2px solid rgba(0, 0, 0, 0);
-    background-clip: padding-box;
+    background-color: #333333;
 }
+
+body::-webkit-scrollbar-thumb:hover {
+    background-color: #404040;
+}
+
+/* links */
 
 a,
 a:link,
@@ -27,4 +32,12 @@ a:visited,
 a:hover,
 a:active {
     color: #a5a5a5;
+}
+
+/* custom */
+
+.error-text {
+    font-size: 12px;
+    line-height: 12px;
+    color: rgb(244, 67, 54);
 }
