--- a/web-app/src/index.css
+++ b/web-app/src/index.css
@@ -8,19 +8,19 @@ body {
 
 /* scrolls */
 
-body::-webkit-scrollbar {
+::-webkit-scrollbar {
     width: 15px;
 }
 
-body::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
     background-color: transparent;
 }
 
-body::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
     background-color: #333333;
 }
 
-body::-webkit-scrollbar-thumb:hover {
+::-webkit-scrollbar-thumb:hover {
     background-color: #404040;
 }
 
